--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "dependencies": {
-    "axios": "^1.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
   }
