--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.3.5"
+  },
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
   }
